--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </button>
       </div>
 
-      <div id="hour-10" class="row time-block present">
+      <div id="hour-10" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">10 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -45,7 +45,7 @@
         </button>
       </div>
 
-      <div id="hour-11" class="row time-block future">
+      <div id="hour-11" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">11 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -53,7 +53,7 @@
         </button>
       </div>
 
-      <div id="hour-12" class="row time-block future">
+      <div id="hour-12" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">12 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
