--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container-lg px-5">
-      <div id="hour-9" class="row time-block past">
+      <div id="hour-09" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -109,8 +110,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./assets/script.js">
-
-    </script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
